--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ayush Mishra</title>
     <link rel="stylesheet" href="CSS\styles.css">
-    <link rel="icon" href="images\favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
@@ -12,11 +12,11 @@
   <body>
 
     <div class="top-container">
-      <img class="top-cloud" src="images\cloud.png" alt="">
+      <img class="top-cloud" src="cloud.png" alt="">
       <h1>I'm Ayush</h1>
       <h2>a developer.</h2>
-      <img class="bottom-cloud" src="images\cloud.png" alt="">
-      <img src="images\mountain.png" alt="">
+      <img class="bottom-cloud" src="cloud.png" alt="">
+      <img src="mountain.png" alt="">
     </div>
 
       <div class="middle-container">
