--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img src="https://cdn-icons-png.flaticon.com/512/8995/8995796.png" alt="Hello">
       <h2>Hello.</h2>
-      <p class = "intro">This is Ayush, much excited learner of the computer science and apiring for a programmer and a mastered web developer.</p>
+      <p class = "intro">This is Ayush, much excited learner of the computer science and aspiring for a programmer and a mastered web developer.</p>
     </div>
 
     <hr>
